--- a/include/openobex/version.h.in
+++ b/include/openobex/version.h.in
@@ -1,6 +1,6 @@
 
-#define OPENOBEX_VERSION       "@VERSION@"
+#define OPENOBEX_VERSION       "@openobex_VERSION@"
 
-#define OPENOBEX_VERSION_MAJOR @VERSION_MAJOR@
-#define OPENOBEX_VERSION_MINOR @VERSION_MINOR@
-#define OPENOBEX_VERSION_PATCH @VERSION_PATCH@
+#define OPENOBEX_VERSION_MAJOR @openobex_VERSION_MAJOR@
+#define OPENOBEX_VERSION_MINOR @openobex_VERSION_MINOR@
+#define OPENOBEX_VERSION_PATCH @openobex_VERSION_PATCH@
